fix: modal content가 overflow 될때만 scroll 나타나도록 수정

--- a/src/components/CardModal.module.scss
+++ b/src/components/CardModal.module.scss
@@ -2,6 +2,6 @@
 	display: inline-block;
 	height: 240px;
 	width: 100%;
-	overflow-y: scroll;
+	overflow-y: auto;
 	line-height: 28px;
 }
